deploy/k8s-infra-hardening/manifests/network-policies/vuln-bank-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vuln-bank-netpol
  namespace: vuln-bank
spec:
  podSelector:
    matchLabels:
      app: vuln-bank
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kong
    ports:
    - port: 5000
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - port: 53
      protocol: UDP
  - to:
    - namespaceSelector:
        matchLabels:
          name: vuln-bank-db
      podSelector:
        matchLabels:
          app: postgres
    ports:
    - port: 5432
